--- a/src/Detail.css
+++ b/src/Detail.css
@@ -12,7 +12,7 @@
   
   .App__Form {
     width: 50%;
-    background-color: #2E4158;
+    background-color: rgb(169, 226, 236);
     height: 90%;
     
     overflow: auto;
@@ -24,7 +24,7 @@
   }
 
   .aaa{
-      padding-left: 5px;
+      
       padding-right: 20px;
       padding-top: 30px;
   }
