--- a/src/Detail.css
+++ b/src/Detail.css
@@ -1,5 +1,5 @@
 .App {
-    height: 80vh;
+   
     display: flex;
     
   }
@@ -12,9 +12,10 @@
   
   .App__Form {
     width: 50%;
-    background-color: rgb(169, 226, 236);
-    height: 90%;
-    
+    background-color: rgb(255, 255, 255);
+    height: 100%;
+    padding-left: 5px;
+    padding-right: 5px;
     overflow: auto;
   }
 
